--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>nav slide</title>
 </head>
 <body>
-    <div id="sidebar">
+    <div id="sidebar" onclick= "show()">
         <div class="toggle-btn">
             <span></span>
             <span></span>
@@ -21,5 +21,7 @@
             <li>Contact</li>
         </ul>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
